--- a/index-de.html
+++ b/index-de.html
@@ -545,36 +545,16 @@ tr:nth-child(even) {
 </head>
 <body>
     <div class="language-switcher">
-        <a href="index.html">🇬🇧 English</a> | <a href="index-de.html"><strong>🇩🇪 Deutsch</strong></a>
+        <a href="index.html">🇬🇧</a> | <a href="index-de.html"><strong>🇩🇪</strong></a>
     </div>
 
     <div class="presentation-container">
         <!-- Folie 1: Die zentrale geschäftliche Herausforderung -->
-        <div class="slide active" data-slide="1">
-            <div class="slide-header">
-                <h2 class="slide-title">Das Daten-Paradoxon: Monetarisierung vs. Schutz</h2>
-            </div>
-            <div class="slide-content">
-                <div style="background-color: var(--color-bg-1); padding: 32px; border-radius: var(--radius-lg); text-align: center; margin: 24px 0; border: 3px solid var(--color-primary);">
-                    <h3 style="font-size: 28px; color: var(--color-primary); margin-bottom: 16px; line-height: 1.4;">"Wie bauen wir profitable Geschäftsmodelle auf Daten auf und schützen gleichzeitig unser geistiges Eigentum UND die persönlichen Daten unserer Kunden?"</h3>
-                </div>
-                <div style="margin: 24px 0;">
-                    <h4 style="font-size: 18px; margin-bottom: 12px; color: var(--color-text);">Unterstützender Kontext:</h4>
-                    <ul style="font-size: 16px; line-height: 1.8;">
-                        <li><strong>Daten sind die neue Infrastruktur — grundlegend, aber auch eine treuhänderische Verantwortung</strong></li>
-                        <li>Drei konkurrierende Kräfte:
-                            <ul style="margin-top: 8px;">
-                                <li>Umsatzgenerierung (Datenmonetarisierung)</li>
-                                <li>Schutz des geistigen Eigentums (Wettbewerbsvorteil)</li>
-                                <li>Datenschutz-Compliance (DSGVO, PDPL, Datensouveränität)</li>
-                            </ul>
-                        </li>
-                    </ul>
-                </div>
-                <div class="warning-card" style="margin-top: 24px;">
-                    <h4 style="font-size: 17px; font-weight: 600;">Die Herausforderung:</h4>
-                    <p style="font-size: 15px; margin-top: 8px;">Traditionelle Ansätze lösen EINE Dimension. Die moderne Datenwirtschaft erfordert die gleichzeitige Lösung ALLER DREI.</p>
-                </div>
+        <div class="slide active" data-slide="1" style="background-image: url('Data.png'); background-size: cover; background-position: center; position: relative; overflow: hidden;">
+            <div style="position: absolute; top: 50%; left: 50%; transform: translate(-50%, -50%); text-align: center; width: 90%; max-width: 1200px; background: rgba(26, 26, 26, 0.85); padding: 3rem; border-radius: 20px; backdrop-filter: blur(10px); border: 3px solid var(--color-primary); box-shadow: 0 10px 50px rgba(0, 0, 0, 0.7);">
+                <h1 style="font-size: 3.5rem; color: var(--color-primary); margin-bottom: 2rem; text-shadow: 0 4px 15px rgba(80, 212, 228, 0.5); line-height: 1.2;">Das Daten-Paradoxon</h1>
+                <h2 style="font-size: 2.2rem; color: #f5f5f5; margin-bottom: 2rem; font-weight: 600; line-height: 1.4;">Wie monetarisieren wir Daten und schützen gleichzeitig IP und Datenschutz?</h2>
+                <p style="font-size: 1.6rem; color: #d4d4d4; line-height: 1.6; margin-bottom: 0;"><strong style="color: var(--color-primary);">Hypothese:</strong> Kein einzelnes Protokoll löst alle drei Dimensionen – wir brauchen eine mehrschichtige Architektur.</p>
             </div>
         </div>
 
