--- a/index.html
+++ b/index.html
@@ -25,25 +25,25 @@
             <!-- Slide 2: Three Protocols -->
             <section>
                 <h2>Three Protocols, Three Philosophies</h2>
-                <div id="protocol-comparison-svg" style="width: 100%; height: 180px; margin: 1rem auto;"></div>
-                <div style="display: flex; justify-content: space-between; gap: 1.5rem; margin-top: 1rem; width: 100%; max-width: 1400px; margin-left: auto; margin-right: auto;">
-                    <div class="fragment" data-fragment-index="0" style="flex: 1; background: rgba(80, 212, 228, 0.15); border: 2px solid #50d4e4; border-radius: 12px; padding: 1.5rem;">
-                        <h3 style="color: #50d4e4; margin-bottom: 1rem; font-size: 1.5rem;">Traditional APIs</h3>
-                        <p style="margin: 0.5rem 0; font-size: 1.1rem;"><strong>Philosophy:</strong> Point-to-point</p>
-                        <p style="margin: 0.5rem 0; font-size: 1.1rem;"><strong>Access:</strong> Developer-controlled</p>
-                        <p style="margin: 0.5rem 0; font-size: 1.1rem;"><strong>Best For:</strong> B2B integrations</p>
+                <div id="protocol-comparison-svg" style="width: 100%; height: 160px; margin: 0.5rem auto; position: relative;"></div>
+                <div style="display: flex; justify-content: space-between; gap: 1.5rem; margin-top: 1rem; width: 100%; max-width: 1400px; margin-left: auto; margin-right: auto; position: relative;">
+                    <div class="fragment" data-fragment-index="0" style="flex: 1; background: rgba(80, 212, 228, 0.15); border: 2px solid #50d4e4; border-radius: 12px; padding: 1.5rem; position: relative !important;">
+                        <h3 style="color: #50d4e4; margin-bottom: 0.8rem; font-size: 1.4rem;">Traditional APIs</h3>
+                        <p style="margin: 0.4rem 0; font-size: 1rem;"><strong>Philosophy:</strong> Point-to-point</p>
+                        <p style="margin: 0.4rem 0; font-size: 1rem;"><strong>Access:</strong> Developer-controlled</p>
+                        <p style="margin: 0.4rem 0; font-size: 1rem;"><strong>Best For:</strong> B2B integrations</p>
                     </div>
-                    <div class="fragment" data-fragment-index="1" style="flex: 1; background: rgba(230, 133, 111, 0.15); border: 2px solid #e6856f; border-radius: 12px; padding: 1.5rem;">
-                        <h3 style="color: #e6856f; margin-bottom: 1rem; font-size: 1.5rem;">DataSpace Protocol</h3>
-                        <p style="margin: 0.5rem 0; font-size: 1.1rem;"><strong>Philosophy:</strong> Federated sovereignty</p>
-                        <p style="margin: 0.5rem 0; font-size: 1.1rem;"><strong>Access:</strong> Contract-first</p>
-                        <p style="margin: 0.5rem 0; font-size: 1.1rem;"><strong>Best For:</strong> Inter-organizational exchange</p>
+                    <div class="fragment" data-fragment-index="1" style="flex: 1; background: rgba(230, 133, 111, 0.15); border: 2px solid #e6856f; border-radius: 12px; padding: 1.5rem; position: relative !important;">
+                        <h3 style="color: #e6856f; margin-bottom: 0.8rem; font-size: 1.4rem;">DataSpace Protocol</h3>
+                        <p style="margin: 0.4rem 0; font-size: 1rem;"><strong>Philosophy:</strong> Federated sovereignty</p>
+                        <p style="margin: 0.4rem 0; font-size: 1rem;"><strong>Access:</strong> Contract-first</p>
+                        <p style="margin: 0.4rem 0; font-size: 1rem;"><strong>Best For:</strong> Inter-organizational exchange</p>
                     </div>
-                    <div class="fragment" data-fragment-index="2" style="flex: 1; background: rgba(29, 116, 128, 0.25); border: 2px solid #1d7480; border-radius: 12px; padding: 1.5rem;">
-                        <h3 style="color: #50d4e4; margin-bottom: 1rem; font-size: 1.5rem;">Model Context Protocol</h3>
-                        <p style="margin: 0.5rem 0; font-size: 1.1rem;"><strong>Philosophy:</strong> Natural language</p>
-                        <p style="margin: 0.5rem 0; font-size: 1.1rem;"><strong>Access:</strong> Human → AI → Data</p>
-                        <p style="margin: 0.5rem 0; font-size: 1.1rem;"><strong>Best For:</strong> End-user democratization</p>
+                    <div class="fragment" data-fragment-index="2" style="flex: 1; background: rgba(29, 116, 128, 0.25); border: 2px solid #1d7480; border-radius: 12px; padding: 1.5rem; position: relative !important;">
+                        <h3 style="color: #50d4e4; margin-bottom: 0.8rem; font-size: 1.4rem;">Model Context Protocol</h3>
+                        <p style="margin: 0.4rem 0; font-size: 1rem;"><strong>Philosophy:</strong> Natural language</p>
+                        <p style="margin: 0.4rem 0; font-size: 1rem;"><strong>Access:</strong> Human → AI → Data</p>
+                        <p style="margin: 0.4rem 0; font-size: 1rem;"><strong>Best For:</strong> End-user democratization</p>
                     </div>
                 </div>
             </section>
