Refactor code structure for improved readability and maintainability

--- a/de.html
+++ b/de.html
@@ -287,7 +287,9 @@
             <section>
                 <div class="slide-content">
                     <h2>DataSpace Protocol: Entwickelt für IP-Schutz & Datensouveränität</h2>
-                    <div id="dataspace-architecture-svg" class="svg-container"></div>
+                    <div class="svg-container">
+                        <img src="/Dataspace-Protocol-1.png" alt="Detailreiches DataSpace-Protocol-Diagramm mit Connectoren, Verträgen und gesichertem Datenfluss" loading="lazy" />
+                    </div>
                     <div class="grid grid-2 fragment">
                         <div class="card">
                             <h3>Hauptkomponenten</h3>
@@ -334,7 +336,9 @@
             <section>
                 <div class="slide-content">
                     <h2>MCP: Zugriff in natürlicher Sprache mit Echtzeit-Zustimmung</h2>
-                    <div id="mcp-architecture-svg" class="svg-container"></div>
+                    <div class="svg-container">
+                        <img src="/mcp.png" alt="Model Context Protocol-Diagramm mit Client, Server und Zustimmungsfluss" loading="lazy" />
+                    </div>
                     <p style="text-align: center; margin-top: 0.5rem; font-size: 1rem;"><strong>Aktuelle Spezifikation:</strong> 2025-06-18 (Nächster RC: 25. Nov 2025)</p>
                     <div class="grid grid-2 fragment">
                         <div class="card">
@@ -408,7 +412,7 @@
             <!-- Folie 11: Zukunftstrends -->
             <section>
                 <div class="slide-content">
-                    <h2>Die Zukunft: Verifiable Credentials & Föderiertes Lernen</h2>
+                    <h2>Die Zukunft: Verifiable Credentials & Neue Standards</h2>
                     <h3>Aktive Entwicklungen</h3>
                     <div class="card card-primary">
                         <h4>1. Verifiable Credentials für MCP</h4>
@@ -419,18 +423,9 @@
                             <li>Überbrückt MCP ↔ DataSpace-Vertrauensmodelle</li>
                         </ul>
                     </div>
-                    <div class="card card-success fragment">
-                        <h4>2. Föderiertes Lernen / Data Trusts</h4>
-                        <ul>
-                            <li>KI-Modelle trainieren ohne Datenzentralisierung</li>
-                            <li>Beispiel: Boehringer Ingelheim (Genomforschung)</li>
-                            <li>Erhält IP + Datenschutz bei Ermöglichung der Zusammenarbeit</li>
-                            <li>Unterstützt durch föderierte DataSpace-Architektur</li>
-                        </ul>
-                    </div>
                     <div class="grid grid-2 fragment">
                         <div class="card">
-                            <h4>3. MCP-Sicherheits-Standardisierung</h4>
+                            <h4>2. MCP-Sicherheits-Standardisierung</h4>
                             <ul>
                                 <li>Cloud Security Alliance: modelcontextprotocol-security.io</li>
                                 <li>OWASP LLM Top 10 Integration</li>
@@ -438,12 +433,12 @@
                             </ul>
                         </div>
                         <div class="card">
-                            <h4>4. DataSpace ISO-Standardisierung</h4>
+                            <h4>3. DataSpace ISO-Standardisierung</h4>
                             <ul>
                                 <li>Eclipse/IDSA bewegt sich in Richtung internationaler Standard</li>
                                 <li>Breitere Akzeptanz außerhalb Europas</li>
                             </ul>
-                            <h4 style="margin-top: 1rem;">5. Natürlichsprachliche Verträge</h4>
+                            <h4 style="margin-top: 1rem;">4. Natürlichsprachliche Verträge</h4>
                             <ul>
                                 <li>ODRL → Menschenlesbare Übersetzung</li>
                                 <li>MCP-Schnittstellen für Vertragsverhandlung</li>
@@ -457,40 +452,30 @@
             <section>
                 <div class="slide-content">
                     <h2>Meine persönlichen Empfehlungen</h2>
-                    <div class="grid grid-3">
+                    <div class="grid grid-2">
                         <div class="card">
-                            <h3>Für Monetarisierung</h3>
-                            <ul>
-                                <li><strong>API-Wirtschaft:</strong> Traditionelle APIs für Entwickler</li>
-                                <li><strong>B2B-Austausch:</strong> DataSpace für IP-geschützten Austausch</li>
-                                <li><strong>Interne Nutzung:</strong> MCP für Zugriff in natürlicher Sprache</li>
-                                <li><strong>Hybrid:</strong> MCP-Frontend → DataSpace/API-Backend</li>
-                            </ul>
+                            <h3>Praktischer Fahrplan</h3>
+                            <ol>
+                                <li>Fokussieren Sie sich auf einen hochwertigen Use Case und kombinieren Sie MCP-Erlebnis mit DataSpace/API-Governance.</li>
+                                <li>Liefern Sie einsatzbereite Services (Dashboards, Alerts, Connectoren) statt reiner Datendumps.</li>
+                                <li>Automatisieren Sie Richtlinien- und Zustimmungsprozesse, damit Compliance im Ablauf steckt.</li>
+                            </ol>
                         </div>
                         <div class="card">
-                            <h3>Für IP-Schutz</h3>
+                            <h3>Was ich gelernt habe</h3>
                             <ul>
-                                <li><strong>B2B:</strong> ODRL-Richtlinien + DataSpace-Connectors</li>
-                                <li><strong>API-Lizenzierung:</strong> Klare Nutzungsbeschränkungen, Audit-Rechte</li>
-                                <li><strong>MCP-Tools:</strong> Metadaten-Exposition minimieren</li>
-                            </ul>
-                        </div>
-                        <div class="card">
-                            <h3>Für Datenschutz-Compliance</h3>
-                            <ul>
-                                <li><strong>DSGVO:</strong> DataSpace bevorzugen (föderierte Architektur)</li>
-                                <li><strong>Kundenorientiert:</strong> MCP mit OAuth 2.1 + Zustimmung</li>
-                                <li><strong>Grenzüberschreitend:</strong> Datenlokalisierung wo erforderlich</li>
+                                <li>Kunden kaufen Lösungen, keine Rohdaten.</li>
+                                <li>Transparente Governance schafft Vertrauen schneller als Verträge allein.</li>
                             </ul>
                         </div>
                     </div>
                     <div class="highlight-box fragment">
-                        <h3>Meine Erfahrungen aus Datenraumprojekten</h3>
-                        <p><strong>Ein reiner Datenmarktplatz funktioniert nicht.</strong> Man muss den Kunden wirkliche Mehrwerte bieten, indem man die Daten aggregiert, für bestimmte Anwendungsfälle aufwertet und einfach bedienbare und integrierbare Schnittstellen bietet.</p>
+                        <h3>Praxisnotiz</h3>
+                        <p>Datenmarktplätze funktionieren nur, wenn Sie Erkenntnisse und Integration gleich mitliefern.</p>
                     </div>
-                    <div class="card card-success fragment">
-                        <h3>Kernaussage</h3>
-                        <p>"Profitable Geschäftsmodelle auf Daten aufbauen und gleichzeitig IP und Kundendatenschutz schützen durch Nutzung <strong>geschichteter Protokolle</strong>: MCP für Benutzererfahrung, DataSpace/APIs für Governance und aufkommende VC/föderiertes Lernen für Vertrauen."</p>
+                    <div class="highlight-box fragment" style="margin-top: 1.5rem;">
+                        <h3>Verbinden Sie sich mit mir</h3>
+                        <p><a href="https://www.linkedin.com/in/mbuchhorn/" target="_blank" rel="noopener">linkedin.com/in/mbuchhorn</a></p>
                     </div>
                 </div>
             </section>
