--- a/index.html
+++ b/index.html
@@ -287,7 +287,9 @@
             <section>
                 <div class="slide-content">
                     <h2>DataSpace Protocol: Built for IP Protection & Data Sovereignty</h2>
-                    <div id="dataspace-architecture-svg" class="svg-container"></div>
+                    <div class="svg-container">
+                        <img src="/Dataspace-Protocol-1.png" alt="Detailed DataSpace Protocol architecture with connectors, contracts, and secure data flow" loading="lazy" />
+                    </div>
                     <div class="grid grid-2 fragment">
                         <div class="card">
                             <h3>Key Components</h3>
@@ -334,7 +336,9 @@
             <section>
                 <div class="slide-content">
                     <h2>MCP: Natural Language Access with Real-Time Consent</h2>
-                    <div id="mcp-architecture-svg" class="svg-container"></div>
+                    <div class="svg-container">
+                        <img src="/mcp.png" alt="Model Context Protocol architecture showing client, server, and consent flow" loading="lazy" />
+                    </div>
                     <p style="text-align: center; margin-top: 0.5rem; font-size: 1rem;"><strong>Current Spec:</strong> 2025-06-18 (Next RC: Nov 25, 2025)</p>
                     <div class="grid grid-2 fragment">
                         <div class="card">
@@ -408,7 +412,7 @@
             <!-- Slide 11: Future Trends -->
             <section>
                 <div class="slide-content">
-                    <h2>The Future: Verifiable Credentials & Federated Learning</h2>
+                    <h2>The Future: Verifiable Credentials & Emerging Standards</h2>
                     <h3>Active Developments</h3>
                     <div class="card card-primary">
                         <h4>1. Verifiable Credentials for MCP</h4>
@@ -419,18 +423,9 @@
                             <li>Bridges MCP ↔ DataSpace trust models</li>
                         </ul>
                     </div>
-                    <div class="card card-success fragment">
-                        <h4>2. Federated Learning / Data Trusts</h4>
-                        <ul>
-                            <li>Train AI models without centralizing data</li>
-                            <li>Example: Boehringer Ingelheim (genomic research)</li>
-                            <li>Maintains IP + privacy while enabling collaboration</li>
-                            <li>Supported by DataSpace federated architecture</li>
-                        </ul>
-                    </div>
                     <div class="grid grid-2 fragment">
                         <div class="card">
-                            <h4>3. MCP Security Standardization</h4>
+                            <h4>2. MCP Security Standardization</h4>
                             <ul>
                                 <li>Cloud Security Alliance: modelcontextprotocol-security.io</li>
                                 <li>OWASP LLM Top 10 integration</li>
@@ -438,12 +433,12 @@
                             </ul>
                         </div>
                         <div class="card">
-                            <h4>4. DataSpace ISO Standardization</h4>
+                            <h4>3. DataSpace ISO Standardization</h4>
                             <ul>
                                 <li>Eclipse/IDSA moving toward international standard</li>
                                 <li>Broader adoption beyond Europe</li>
                             </ul>
-                            <h4 style="margin-top: 1rem;">5. Natural Language Contracts</h4>
+                            <h4 style="margin-top: 1rem;">4. Natural Language Contracts</h4>
                             <ul>
                                 <li>ODRL → Human-readable translation</li>
                                 <li>MCP interfaces for contract negotiation</li>
@@ -457,40 +452,30 @@
             <section>
                 <div class="slide-content">
                     <h2>My Personal Recommendations</h2>
-                    <div class="grid grid-3">
+                    <div class="grid grid-2">
                         <div class="card">
-                            <h3>For Monetization</h3>
-                            <ul>
-                                <li><strong>API Economy:</strong> Traditional APIs for developers</li>
-                                <li><strong>B2B Sharing:</strong> DataSpace for IP-protected exchange</li>
-                                <li><strong>Internal Use:</strong> MCP for natural language access</li>
-                                <li><strong>Hybrid:</strong> MCP frontend → DataSpace/API backend</li>
-                            </ul>
+                            <h3>Practical Playbook</h3>
+                            <ol>
+                                <li>Anchor on one high-value use case and pair MCP UX with governed DataSpace/APIs.</li>
+                                <li>Deliver ready-to-use services (dashboards, alerts, connectors) instead of raw datasets.</li>
+                                <li>Automate policy and consent enforcement so compliance is built into the workflow.</li>
+                            </ol>
                         </div>
                         <div class="card">
-                            <h3>For IP Protection</h3>
+                            <h3>What I Learned</h3>
                             <ul>
-                                <li><strong>B2B:</strong> ODRL policies + DataSpace connectors</li>
-                                <li><strong>API Licensing:</strong> Clear usage restrictions, audit rights</li>
-                                <li><strong>MCP Tools:</strong> Minimize metadata exposure</li>
-                            </ul>
-                        </div>
-                        <div class="card">
-                            <h3>For Privacy Compliance</h3>
-                            <ul>
-                                <li><strong>GDPR:</strong> Prefer DataSpace (federated architecture)</li>
-                                <li><strong>Consumer-Facing:</strong> MCP with OAuth 2.1 + consent</li>
-                                <li><strong>Cross-Border:</strong> Data localization where required</li>
+                                <li>Clients buy outcomes, not data dumps.</li>
+                                <li>Transparent governance earns trust faster than contracts alone.</li>
                             </ul>
                         </div>
                     </div>
                     <div class="highlight-box fragment">
-                        <h3>My Experience from DataSpace Projects</h3>
-                        <p><strong>A pure data marketplace doesn't work.</strong> You must offer real added value to customers by aggregating data, enhancing it for specific use cases, and providing easy-to-use and integrable interfaces.</p>
+                        <h3>Field Note</h3>
+                        <p>Data marketplaces succeed only when you package insight and integration along with the bytes.</p>
                     </div>
-                    <div class="card card-success fragment">
-                        <h3>Key Takeaway</h3>
-                        <p>"Build profitable business models on data while protecting IP and customer privacy by using <strong>layered protocols</strong>: MCP for user experience, DataSpace/APIs for governance, and emerging VC/federated learning for trust."</p>
+                    <div class="highlight-box fragment" style="margin-top: 1.5rem;">
+                        <h3>Connect with me</h3>
+                        <p><a href="https://www.linkedin.com/in/mbuchhorn/" target="_blank" rel="noopener">linkedin.com/in/mbuchhorn</a></p>
                     </div>
                 </div>
             </section>
